i put a fixed size on the images when the browser window gets too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,20 @@ footer {
 	min-width: 100%;
 }
 
+@media screen and (max-height: 400px) {
+.modelstream {
+	max-height: 380px;
+	min-width: 100%;
+}
+}
+
+@media screen and (max-width: 400px) {
+.modelstream {
+	max-height: 90%;
+	min-width: 219px;
+}
+}
+
 /*-----------------------------------------------------------------------------------*/
 /*	END MODEL STYLES
 /*-----------------------------------------------------------------------------------*/
